--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
+    "formik": "^2.4.6",
+    "prop-types": "^15.8.1",
+    "react-bootstrap": "^2.10.5",
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
+    "yup": "^1.4.0"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -23,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "prettier": "^3.3.3",
     "vite": "^6.0.0"
   }
 }
